--- a/static/styles.css
+++ b/static/styles.css
@@ -119,7 +119,7 @@ h3 {
  .restaurant-list {
  	background-color: #F0F0F0;
  	padding: 20px;
-u }
+}
  .restaurant-list:hover {
  	background-color: #e1e17f;
  	padding: 20px;
@@ -160,4 +160,10 @@ u }
 	list-style-type: none;
 	text-align: center;
 
+}
+#signinButton {
+	height: 30px;
+	width: 60px;
+	color: red;
+	border: 2px solid;
 }
