--- a/templates/login.html
+++ b/templates/login.html
@@ -13,19 +13,51 @@
     <body>
         <!-- GOOGLE PLUS SIGN IN BUTTON -->
         <div id='signinButton'>
-            <span class='g-signin2'>
+            <span class='g-signin2'
+                  data-callback='signInCallback'>
                   <!--data-scope='openid email'
                   data-clientid='227515129287-qk3sdbg0029cll8adedpg1kuj1vfu7oq.apps.googleusercontent.com'
                   data-redirecturi='postmessage'
                   data-accesstype='offline'
                   data-cookiepolicy='single_host_origin'
-                  data-callback='signInCallback'
                   data-approvalprompt='force'>-->
+
           </span>
         </div> <!-- /#signinButton -->
         <!-- END GOOGLE PLUS SIGN IN BUTTON -->
 
         <div id='result'>
         </div> <!-- /#result -->
+
+        <script>
+            function signInCallback(authResult) {
+                if (authResult['code']) {
+                    // Hide the sign-in button now that the user is authorized
+                    $('#signinButton').attr('style', 'display: none');
+                    // Send the one-time-use code to the server, if the server responds,
+                    //    write a 'login successful' message to the web page and then
+                    //    redirect back to the main restaurants page
+                    $.ajax({
+                        type: 'POST',
+                        url: '/gconnect?state={{STATE}}',
+                        processData: false,
+                        contentType: 'application/octet-stream; charset=utf-8',
+                        data: authResult['code'],
+                        success: function (result) {
+                            if (result) {
+                                $(#result).html('Login successful!<br/>' + result + '<br/>Redirecting...');
+                                setTimeout(function () {
+                                    window.location.href = '/restaurant';
+                                }, 4000)
+                            } else if (authResult['error']) {
+                                console.log('There was an error: ' + authResult['error']);
+                            } else {
+                                $('#result').html('Failed to make a server side call. Check your configuration and console.');
+                            }
+                        }
+                    });
+                }
+            }
+        </script>
     </body>
 </html>
