--- a/templates/login.html
+++ b/templates/login.html
@@ -2,62 +2,110 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="google-signin-client_id" content="227515129287-qk3sdbg0029cll8adedpg1kuj1vfu7oq.apps.googleusercontent.com">
+        <meta name="google-signin-client_id" content='227515129287-d8bpeg70cv166c00rmu0g6m1j3d4kbfr.apps.googleusercontent.com'>
         <title>Login</title>
 
         <!-- LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
         <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js'></script>
-        <script src='//apis.google.com/js/platform.js?onload=start' async defer></script>
-        <script src="https://apis.google.com/js/platform.js" async defer></script>
+        <script src="//apis.google.com/js/platform.js?onload=start"> </script>
+        <!--<script src="https://apis.google.com/js/platform.js" async defer></script>-->
     </head>
     <body>
-        <!-- GOOGLE PLUS SIGN IN BUTTON -->
-        <div id='signinButton'>
-            <span class='g-signin2'
-                  data-callback='signInCallback'>
-                  <!--data-scope='openid email'
-                  data-clientid='227515129287-qk3sdbg0029cll8adedpg1kuj1vfu7oq.apps.googleusercontent.com'
-                  data-redirecturi='postmessage'
-                  data-accesstype='offline'
-                  data-cookiepolicy='single_host_origin'
-                  data-approvalprompt='force'>-->
-
-          </span>
+        <!-- GOOGLE SIGN IN BUTTON -->
+        <div id='signinButton' class='g-signin2' data-onsuccess='onSignIn' data-scope="openid email"
+                        data-clientid="227515129287-d8bpeg70cv166c00rmu0g6m1j3d4kbfr.apps.googleusercontent.com"
+                        data-redirecturi="postmessage"
+                        data-accesstype="offline"
+                        data-cookiepolicy="single_host_origin"
+                        data-approvalprompt="force">
+                <!--<span   class="g-signin2"
+                        data-scope="openid email"
+                        data-clientid="13140951618-15nik769cellkubaqnjk5facdib2dh4d.apps.googleusercontent.com"
+                        data-redirecturi="postmessage"
+                        data-accesstype="offline"
+                        data-cookiepolicy="single_host_origin"
+                        data-callback="signInCallback"
+                        data-approvalprompt="force">
+            </span>-->
         </div> <!-- /#signinButton -->
+        <a href='#' onclick="signOut();">Sign out</a>
         <!-- END GOOGLE PLUS SIGN IN BUTTON -->
 
         <div id='result'>
         </div> <!-- /#result -->
 
+        <!-- GOOGLE SIGN IN SCRIPT -->
         <script>
-            function signInCallback(authResult) {
+            function onSignIn(authResult) {
+                console.log('onSignIn has been pressed');
+                console.log('authResult: ', authResult);
+
                 if (authResult['code']) {
                     // Hide the sign-in button now that the user is authorized
                     $('#signinButton').attr('style', 'display: none');
-                    // Send the one-time-use code to the server, if the server responds,
-                    //    write a 'login successful' message to the web page and then
-                    //    redirect back to the main restaurants page
+                    // Send the one-time-use code to the server, if the server responds, write a 'login successful' message to the web page and then redirect back to the main restaurants page
                     $.ajax({
                         type: 'POST',
                         url: '/gconnect?state={{STATE}}',
                         processData: false,
-                        contentType: 'application/octet-stream; charset=utf-8',
                         data: authResult['code'],
-                        success: function (result) {
+                        contentType: 'application/octet-stream; charset=utf-8',
+                        success: function(result) {
+                                    // Handle or verify the server response if necessary.
+                                    if (result) {
+                                        $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
+                                        setTimeout(function() {
+                                                        window.location.href = "/restaurant";
+                                                    }, 4000);
+                                    } else if (authResult['error']) {
+                                        console.log('There was an error: ' + authResult['error']);
+                                    } else {
+                                        $('#result').html('Failed to make a server-side call. Check your configuration and console.');
+                                    }
+                                }
+                        });
+                }
+            }
+            function signOut() {
+                let auth2 = gapi.auth2.getAuthInstance();
+                // Show the sign-in button now that the user is authorized
+                    $('#signinButton').attr('style', 'display: block');
+                auth2
+                    .signOut()
+                    .then(function () {
+                                        console.log('User signed out.');
+                                      });
+            }
+            function signInCallback(authResult) {
+                if (authResult['code']) {
+                    // Hide the sign-in button now that the user is authorized
+                    $('#signinButton').attr('style', 'display: none');
+                    // Send the one-time-use code to the server, if the server responds, write a 'login successful' message to the web page and then redirect back to the main restaurants page
+                    $.ajax({
+                        type: 'POST',
+                        url: '/gconnect?state={{STATE}}',
+                        processData: false,
+                        data: authResult['code'],
+                        contentType: 'application/octet-stream; charset=utf-8',
+                        success: function(result) {
+                            // Handle or verify the server response if necessary.
                             if (result) {
-                                $(#result).html('Login successful!<br/>' + result + '<br/>Redirecting...');
-                                setTimeout(function () {
-                                    window.location.href = '/restaurant';
-                                }, 4000)
+                                $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
+                                setTimeout(function() {
+                                                        window.location.href = "/restaurant";
+                                                    }, 4000);
+
                             } else if (authResult['error']) {
                                 console.log('There was an error: ' + authResult['error']);
                             } else {
-                                $('#result').html('Failed to make a server side call. Check your configuration and console.');
+                                $('#result').html('Failed to make a server-side call. Check your configuration and console.');
                             }
                         }
+
                     });
                 }
             }
         </script>
+        <!-- END GOOGLE SIGN IN -->
     </body>
 </html>
