Create a Local Permission System - Create a 'users' table, a 'userID' column should be added to both the 'restaurant' and 'menuItem' tables. - A backing code to hook everything together - New database model:
| User             |        | Restaurant       |
|:---              |        |:---              |
| id <integer>     |___     | id <integer>     |____
| name <string>    |   |    | name <string>    |    |
| email <string>   |   |____| user_id <string> |    |
| picture <string> |   |    | relationship     |    |
                       |                            |
                       |                            |   | menuItem                |
                       |                            |   |:---                     |
                       |                            |   | id <integer>            |
                       |                            |   | name <string>           |
                       |                            |   | description <string>    |
                       |                            |   | price <string>          |
                       |                            |   | course <string>         |
                       |                            |___| restaurant_id <integer> |
                       |________________________________| user_id <integer>       |
                                                        | relationship            |
                                                        | relationship            |

- Create new databaser with users - database_setup.py
- Populate the new database, with updated data including users - lotsofmenus.py
- 'createUser': function, which receives a 'login_session' and creates a new user in 'restaurantmenuwithusers.db' database, extracting all of the fields required to populate it with the information gathered from the 'login_session'.  It then return the 'user.id' of the new created user.
- 'getUserID': function that searchs a user by its provided email, and if the 

--- a/templates/login.html
+++ b/templates/login.html
@@ -12,21 +12,15 @@
     </head>
     <body>
         <!-- GOOGLE SIGN IN BUTTON -->
-        <div id='signinButton' class='g-signin2' data-onsuccess='onSignIn' data-scope="openid email"
-                        data-clientid="227515129287-d8bpeg70cv166c00rmu0g6m1j3d4kbfr.apps.googleusercontent.com"
-                        data-redirecturi="postmessage"
-                        data-accesstype="offline"
-                        data-cookiepolicy="single_host_origin"
-                        data-approvalprompt="force">
-                <!--<span   class="g-signin2"
-                        data-scope="openid email"
-                        data-clientid="13140951618-15nik769cellkubaqnjk5facdib2dh4d.apps.googleusercontent.com"
-                        data-redirecturi="postmessage"
-                        data-accesstype="offline"
-                        data-cookiepolicy="single_host_origin"
-                        data-callback="signInCallback"
-                        data-approvalprompt="force">
-            </span>-->
+        <div id='signinButton'
+             class='g-signin2'
+             data-onsuccess='onSignIn'
+             data-scope="openid email"
+             data-clientid="227515129287-d8bpeg70cv166c00rmu0g6m1j3d4kbfr.apps.googleusercontent.com"
+             data-redirecturi="postmessage"
+             data-accesstype="offline"
+             data-cookiepolicy="single_host_origin"
+             data-approvalprompt="force">
         </div> <!-- /#signinButton -->
         <a href='#' onclick="signOut();">Sign out</a>
         <!-- END GOOGLE PLUS SIGN IN BUTTON -->
