--- a/static/styles.css
+++ b/static/styles.css
@@ -100,7 +100,7 @@ h3 {
 }
 .banner.main {
 	height: 150px;
-	background: url("/static/top-banner.jpg");
+	background: url("../static/top-banner.jpg");
 	background-position: right;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -160,10 +160,4 @@ h3 {
 	list-style-type: none;
 	text-align: center;
 
-}
-#signinButton {
-	height: 30px;
-	width: 60px;
-	color: red;
-	border: 2px solid;
 }
