--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,9 +1,10 @@
 {% extends "main.html" %}
 {% block content %}
-{% include "header.html" %}
+	{% include "header.html" %}
 	<div class="row divider green">
 		<div class="col-md-12"></div>
 	</div>
+
 	<div class="row banner menu">
 		<div class="col-md-11 col-md-offset-1 padding-none">
 			<h1>{{ restaurant.name }}
@@ -16,24 +17,25 @@
 		</div>
 	</div>
 
-<div class = 'flash'>
-		      {% with messages = get_flashed_messages() %}
-      {% if messages %}
-          
-        <ul>
-        {% for message in messages %}
-            <li> <strong> {{ message }} </strong> </li>
-        {% endfor %}
-        </ul>
-        {% endif %}
-    {% endwith %}
+	<div class = 'flash'>
+				  {% with messages = get_flashed_messages() %}
+		  {% if messages %}
 
-</div>
+			<ul>
+			{% for message in messages %}
+				<li> <strong> {{ message }} </strong> </li>
+			{% endfor %}
+			</ul>
+			{% endif %}
+		{% endwith %}
+
+	</div>
+
 	<div class="row padding-top padding-bottom">
 		<div class="col-md-1"></div>
 		<div class="col-md-11 padding-none">
 			<a href="{{url_for('editRestaurant', restaurant_id = restaurant.id )}}">
-				<button class="btn btn-default" id="new-menu-item">
+				<button class="btn btn-default" id="edit-restaurant">
 					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit Restaurant
 				</button>
 			</a>
@@ -62,8 +64,8 @@
 								<h3>{{i.name}}</h3>
 								<p>{{i.description}}</p>
 								<p class="menu-price">{{i.price}}</p>
-								<a href='{{url_for('editMenuItem', restaurant_id = restaurant.id, menu_id=i.id ) }}'>Edit</a> | 
-								<a href='{{url_for('deleteMenuItem', restaurant_id = restaurant.id, menu_id=i.id ) }}'>Delete</a>
+								<a href='{{url_for("editMenuItem", restaurant_id = restaurant.id, menu_id=i.id ) }}'>Edit</a> |
+								<a href='{{url_for("deleteMenuItem", restaurant_id = restaurant.id, menu_id=i.id ) }}'>Delete</a>
 							</div>
 						{% endif %}
 					{% endfor %}
@@ -76,8 +78,8 @@
 							<h3>{{i.name}}</h3>
 							<p>{{i.description}}</p>
 							<p class="menu-price">{{i.price}}</p>
-							<a href='{{url_for('editMenuItem', restaurant_id = restaurant.id, menu_id=i.id ) }}'>Edit</a> | 
-							<a href='{{url_for('deleteMenuItem', restaurant_id = restaurant.id, menu_id=i.id ) }}'>Delete</a>
+							<a href='{{url_for("editMenuItem", restaurant_id = restaurant.id, menu_id=i.id ) }}'>Edit</a> |
+							<a href='{{url_for("deleteMenuItem", restaurant_id = restaurant.id, menu_id=i.id ) }}'>Delete</a>
 						</div>
 						{% endif %}
 					{% endfor %}
@@ -90,8 +92,7 @@
 							<h3>{{i.name}}</h3>
 							<p>{{i.description}}</p>
 							<p class="menu-price">{{i.price}}</p>
-							<a href='{{url_for('editMenuItem', restaurant_id = restaurant.id, menu_id=i.id ) }}'>Edit</a> | 
-							<a href='{{url_for('deleteMenuItem', restaurant_id = restaurant.id, menu_id=i.id ) }}'>Delete</a>
+							<a href='{{url_for("editMenuItem", restaurant_id = restaurant.id, menu_id=i.id ) }}'>Edit</a> |
 						</div>
 						{% endif %}
 					{% endfor %}
@@ -102,8 +103,8 @@
 							<h3>{{i.name}}</h3>
 							<p>{{i.description}}</p>
 							<p class="menu-price">{{i.price}}</p>
-							<a href='{{url_for('editMenuItem', restaurant_id = restaurant.id, menu_id=i.id ) }}'>Edit</a> | 
-							<a href='{{url_for('deleteMenuItem', restaurant_id = restaurant.id, menu_id=i.id ) }}'>Delete</a>
+							<a href='{{url_for("editMenuItem", restaurant_id = restaurant.id, menu_id=i.id ) }}'>Edit</a> |
+							<a href='{{url_for("deleteMenuItem", restaurant_id = restaurant.id, menu_id=i.id ) }}'>Delete</a>
 						</div>
 						{% endif %}
 					{% endfor %}
