--- a/templates/publicrestaurants.html
+++ b/templates/publicrestaurants.html
@@ -1,9 +1,10 @@
 {% extends "main.html" %}
 {% block content %}
-	{% include "header.html" %}
 	<div class="row top-menu">
 		<div class="col-md-10"></div>
-		<div class="col-md-2 text-right"></div>
+		<div class="col-md-2 text-right">
+			<a href="{{url_for('showLogin')}}">Click Here to Log in </a>
+		</div>
 	</div>
 	<div class="row divider blue">
 		<div class="col-md-12"></div>
@@ -19,22 +20,18 @@
 		{% with messages = get_flashed_messages() %}
 			{% if messages %}
 				<ul>
-					{% for message in messages %}
-						<li> <strong> {{ message }} </strong> </li>
-					{% endfor %}
-				</ul>
-			{% endif %}
-		{% endwith %}
+        			{% for message in messages %}
+            			<li> <strong> {{ message }} </strong> </li>
+        			{% endfor %}
+        		</ul>
+        	{% endif %}
+    	{% endwith %}
 	</div>
-	
+
 	<div class="row padding-top padding-bottom">
 		<div class="col-md-1"></div>
 		<div class="col-md-10 padding-none">
-			<a href="{{url_for('newRestaurant')}}">
-				<button class="btn btn-default" id="new-restaurant">
-					<span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>Add Restaurant
-				</button>
-			</a>
+			
 		</div>
 		<div class="col-md-1"></div>
 	</div>
