Create Facebook OAuth 1. Create the App in Facebook, to obtain an 'app_id' and 'app_secret', store the information in a file called 'fb_client.secrets.json' 2. Add the client side functionality to 'login.html', we will use the Facebook JavaScrip SDK for Facebook login.

--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="google-signin-client_id" content='227515129287-d8bpeg70cv166c00rmu0g6m1j3d4kbfr.apps.googleusercontent.com'>
+        <meta name="google-signin-client_id" content={{ secrets.web.client_id }}>
+        <!--<meta name="google-signin-client_id" content='227515129287-d8bpeg70cv166c00rmu0g6m1j3d4kbfr.apps.googleusercontent.com'>-->
         <title>Login</title>
 
         <!-- LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
@@ -12,24 +13,32 @@
     </head>
     <body>
         <!-- GOOGLE SIGN IN BUTTON -->
+
         <div id='signinButton'
              class='g-signin2'
              data-onsuccess='onSignIn'
              data-scope="openid email"
-             data-clientid="227515129287-d8bpeg70cv166c00rmu0g6m1j3d4kbfr.apps.googleusercontent.com"
+             data-clientid={{ secrets.web.client_id }}
              data-redirecturi="postmessage"
              data-accesstype="offline"
              data-cookiepolicy="single_host_origin"
              data-approvalprompt="force">
         </div> <!-- /#signinButton -->
-        <a href='#' onclick="signOut();">Sign out</a>
+        <div><button class='btn btn-default'><a href='#' onclick="signOut();">Sign out</a></button></div>
+
         <!-- END GOOGLE PLUS SIGN IN BUTTON -->
+
+        <button class='btn btn-default' id='fb-btn'>
+            <fb:login-button scope="public_profile,email" onlogin="sendTokenToServer();">
+                <a href='javascript:sendTokenToServer()'>Login with Facebook</a>
+            </fb:login-button>
+        </button>
 
         <div id='result'>
         </div> <!-- /#result -->
 
-        <!-- GOOGLE SIGN IN SCRIPT -->
         <script>
+            // <!-- GOOGLE - SIGN_IN SCRIPT -->
             function onSignIn(authResult) {
                 console.log('onSignIn has been pressed');
                 console.log('authResult: ', authResult);
@@ -60,6 +69,8 @@
                         });
                 }
             }
+            // <!-- END GOOGLE SIGN IN -->
+            // <!-- GOOGLE SIGN OUT -->
             function signOut() {
                 let auth2 = gapi.auth2.getAuthInstance();
                 // Show the sign-in button now that the user is authorized
@@ -70,36 +81,68 @@
                                         console.log('User signed out.');
                                       });
             }
-            function signInCallback(authResult) {
-                if (authResult['code']) {
-                    // Hide the sign-in button now that the user is authorized
-                    $('#signinButton').attr('style', 'display: none');
-                    // Send the one-time-use code to the server, if the server responds, write a 'login successful' message to the web page and then redirect back to the main restaurants page
+            // <!-- END GOOGLE SIGN_IN -->
+        </script>
+
+        <script>
+            // <!-- FACEBOOK - SIGN_IN -->
+            window.fbAsyncInit = function() {
+                console.log('----------- fbAsyncInit -----------');
+                FB.init({
+                    appId      : '391484321691650', // fb_data.app_id,
+                    cookie     : true,  // enable cookies to allow the server to access the session
+                    xfbml      : true,  // parse social plugins on this page
+                    version    : 'v2.8' // use version 2.8
+                });
+            };
+
+            // Load the SDK asynchronously
+            (function(d, s, id) {
+                console.log('----------- SDK asynchronously -----------');
+                let js, fjs = d.getElementsByTagName(s)[0];
+
+                if (d.getElementById(id)) return;
+
+                js = d.createElement(s); js.id = id;
+                js.src = "//connect.facebook.net/en_US/sdk.js";
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));
+
+            // Here we run a very simple test of the Graph API after login is
+            // successful.  See statusChangeCallback() for when this call is made.
+            function sendTokenToServer() {
+                console.log('----------- sendTokenToServer -----------');
+                console.log('FB: ', FB);
+                console.log('FB.getAuthResponse():', FB.getAuthResponse());
+                let access_token = FB.getAuthResponse()['accessToken'];
+
+                console.log('access_token: ', access_token);
+                console.log('Welcome!  Fetching your information.... ');
+
+                FB.api('/me', function (response) {
+                    console.log('Successful login for: ' + response.name);
                     $.ajax({
                         type: 'POST',
-                        url: '/gconnect?state={{STATE}}',
+                        url: '/fbconnect?state={{STATE}}',
                         processData: false,
-                        data: authResult['code'],
+                        data: access_token,
                         contentType: 'application/octet-stream; charset=utf-8',
                         success: function(result) {
                             // Handle or verify the server response if necessary.
                             if (result) {
-                                $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
+                                $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...');
                                 setTimeout(function() {
-                                                        window.location.href = "/restaurant";
-                                                    }, 4000);
-
-                            } else if (authResult['error']) {
-                                console.log('There was an error: ' + authResult['error']);
+                                    window.location.href = "/restaurant";
+                                }, 4000);
                             } else {
                                 $('#result').html('Failed to make a server-side call. Check your configuration and console.');
                             }
                         }
-
                     });
-                }
+                });
             }
+            // <!-- END FACEBOOK SIGN IN -->
         </script>
-        <!-- END GOOGLE SIGN IN -->
+        <script async defer src="https://connect.facebook.net/en_US/sdk.js"></script>
     </body>
 </html>
